syntax = "proto3";

package manifest;

// The Global Registry of the Vector Database
message Manifest {
  uint64 version = 1;       // Monotonic version for CAS
  uint64 created_at = 2;    // Unix timestamp
  
  // Configuration snapshots (to detect schema skew)
  uint32 dim = 3;
  string metric = 4;        // "L2", "COSINE"

  // The Routing Table
  repeated Centroid centroids = 5;

  // The Physical Registry
  repeated Bucket buckets = 6;
  
  // Global Delete Tracking
  repeated string tombstone_files = 7; // List of active tombstone run_ids
}

message Centroid {
  uint32 id = 1;            // Bucket ID
  repeated float vector = 2; // The geometric center
}

message Bucket {
  uint32 id = 1;
  string run_id = 2;        // The S3 File (Format B / Unified RowGroup)
  uint64 vector_count = 3;  // Approximate count for balancing
  uint32 tombstone_count = 4; // Hint for compaction
  float radius = 5;         // Max distance in bucket (for pruning optimization)
}